--- a/Preprocessing & Modeling_tuning.ipynb
+++ b/Preprocessing & Modeling_tuning.ipynb
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -886,18 +886,18 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Predicted Irrelated</th>\n",
        "      <th>Predicted Related</th>\n",
+       "      <th>Predicted Irrelated</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Actual Irrelated</th>\n",
+       "      <th>Actual Related</th>\n",
        "      <td>661</td>\n",
        "      <td>22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Actual Related</th>\n",
+       "      <th>Actual Irrelated</th>\n",
        "      <td>7</td>\n",
        "      <td>141</td>\n",
        "    </tr>\n",
@@ -906,12 +906,12 @@
        "</div>"
       ],
       "text/plain": [
-       "                  Predicted Irrelated  Predicted Related\n",
-       "Actual Irrelated                  661                 22\n",
-       "Actual Related                      7                141"
+       "                  Predicted Related  Predicted Irrelated\n",
+       "Actual Related                  661                   22\n",
+       "Actual Irrelated                  7                  141"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -921,8 +921,8 @@
     "\n",
     "metrics.confusion_matrix_dataframe(y_train, \n",
     "                                   cvec_svc_train_preds,\n",
-    "                                   columns = [\"Predicted Irrelated\", \"Predicted Related\"],\n",
-    "                                   index   = [\"Actual Irrelated\", \"Actual Related\"])"
+    "                                    columns = [\"Predicted Related\", \"Predicted Irrelated\"],\n",
+    "                                   index   = [\"Actual Related\", \"Actual Irrelated\"])"
    ]
   },
   {
@@ -1265,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1289,18 +1289,18 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Predicted Irrelated</th>\n",
        "      <th>Predicted Related</th>\n",
+       "      <th>Predicted Irrelated</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Actual Irrelated</th>\n",
+       "      <th>Actual Related</th>\n",
        "      <td>206</td>\n",
        "      <td>23</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Actual Related</th>\n",
+       "      <th>Actual Irrelated</th>\n",
        "      <td>13</td>\n",
        "      <td>36</td>\n",
        "    </tr>\n",
@@ -1309,12 +1309,12 @@
        "</div>"
       ],
       "text/plain": [
-       "                  Predicted Irrelated  Predicted Related\n",
-       "Actual Irrelated                  206                 23\n",
-       "Actual Related                     13                 36"
+       "                  Predicted Related  Predicted Irrelated\n",
+       "Actual Related                  206                   23\n",
+       "Actual Irrelated                 13                   36"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1324,8 +1324,8 @@
     "\n",
     "metrics.confusion_matrix_dataframe(y_test, \n",
     "                                   cvec_svc_preds,\n",
-    "                                   columns = [\"Predicted Irrelated\", \"Predicted Related\"],\n",
-    "                                   index   = [\"Actual Irrelated\", \"Actual Related\"])"
+    "                                   columns = [\"Predicted Related\", \"Predicted Irrelated\"],\n",
+    "                                   index   = [\"Actual Related\", \"Actual Irrelated\"])"
    ]
   },
   {
